--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application>
         <activity
-            android:name="com.sangrok.afreecatv.MainActivity"
+            android:name="com.sangrok.afreecatv.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Afreecatv">
             <intent-filter>
@@ -12,6 +13,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.sangrok.afreecatv.detail.DetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Afreecatv" />
     </application>
 
 </manifest>
